# ToyC

./: README.md  dune-project  test_fixes.ps1  test_function_call.tc  toyc.opam
_build/: .db  (+2 more)
_build/default/src/: dune  toyc_ast.ml  toyc_codegen.ml  toyc_lexer.ml  toyc_lexer.mll  toyc_lib.cma  toyc_lib.cmxa  toyc_parser.ml  toyc_parser.mli  toyc_parser.mly  toyc_parser__mock.ml.mock  toyc_parser__mock.mli.inferred
_build/default/src/.main.eobjs/byte/: dune__exe__Main.cmi  dune__exe__Main.cmo  dune__exe__Main.cmt
_build/default/src/.main.eobjs/native/: dune__exe__Main.cmx
_build/default/src/.merlin-conf/: exe-main  exe-test_codegen  exe-test_lexer  exe-test_parser  exe-test_semantic  lib-toyc
_build/default/src/.test_codegen.eobjs/byte/: dune__exe__Test_codegen.cmi  dune__exe__Test_codegen.cmo  dune__exe__Test_codegen.cmt
_build/default/src/.test_codegen.eobjs/native/: dune__exe__Test_codegen.cmx
_build/default/src/.test_lexer.eobjs/byte/: dune__exe__Test_lexer.cmi  dune__exe__Test_lexer.cmo  dune__exe__Test_lexer.cmt
_build/default/src/.test_lexer.eobjs/native/: dune__exe__Test_lexer.cmx
_build/default/src/.test_parser.eobjs/byte/: dune__exe__Test_parser.cmi  dune__exe__Test_parser.cmo  (+1 more)
_build/default/src/.toyc_lib.objs/: toyc_lib__Toyc_ast.impl.d  toyc_lib__Toyc_codegen.impl.d  toyc_lib__Toyc_lexer.impl.all-deps  toyc_lib__Toyc_lexer.impl.d  toyc_lib__Toyc_parser.impl.d  toyc_lib__Toyc_parser.intf.all-deps  toyc_lib__Toyc_parser.intf.d  toyc_lib__Toyc_semantic.impl.d  toyc_parser__mock.impl.d
_build/default/src/test/: test.tc  test1.tc  test_error.tc
(+59 files in other folders)
